fix: nowrap dropdown input

--- a/components/form/dropdown/dropdowninput/styles.scss
+++ b/components/form/dropdown/dropdowninput/styles.scss
@@ -15,6 +15,7 @@
 .input {
     border-right: 0;
     padding-right: 3rem;
+    white-space: nowrap;
 }
 
 .control {
